[metadata]
name = pyslvs
version = attr: pyslvs.__version__
description = Pyslvs core module. An open source planar linkage mechanism synthesis tool.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyslvs,mechanical-engineering,2d
license = AGPL
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/pyslvs
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Cython
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    cython >= 3.0a6
install_requires =
    numpy
    lark-parser

[options.package_data]
* = *.pyi, *.pxd, *.pyx
pyslvs = py.typed

[options.packages.find]
exclude =
    test

[mypy]
pretty = True
show_error_codes = True
show_column_numbers = True
ignore_missing_imports = True
allow_redefinition = True
warn_redundant_casts = True
warn_unreachable = True
strict_equality = True
